Videoeditor, refactor for production